[package]
edition = "2021"
name = "samplewinsysgui"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.windows-sys]
features = [
  "Win32_Foundation",
  "Win32_Graphics_Gdi",
  "Win32_System_LibraryLoader",
  "Win32_UI_WindowsAndMessaging",
  "Win32_System_Diagnostics_Debug",
  "Win32_UI_HiDpi",
]
version = "0.35.0"
